--- a/client/src/styles/user.css
+++ b/client/src/styles/user.css
@@ -17,10 +17,10 @@ span {
 }
 
 .banner {
-  background-image: url("../images/image2.svg");
+  background-image: url("../images/Sin\ título-1.png");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-position: center;
   background-color: black;
@@ -161,6 +161,9 @@ p {
   display: flex;
   align-items: center;
   color: white;
+  font-size: 2.5vw;
+
+
 }
 
 .user {
